# vault

./: .gitignore  README
c++14/: .gitignore  11-14features.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  libtool
c++14/autom4te.cache/: output.0  output.1  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
c++14/include/misc/: algo_util.h  dedection.h  misc.hpp
c++14/src/: Makefile.am
c++14/src/concurrent/: Makefile  Makefile.am  Makefile.in  basic.cpp  basic.hpp  sync.cpp
c++14/src/demo/: demo.cpp
c++14/src/lambda/: Makefile  Makefile.am  Makefile.in  lambda_exam.cpp  lambda_exam.hpp
c++14/src/misc/: Makefile.am  Makefile.in  deduction.cpp  misc.cpp  misc.hpp  test.cpp
c++14/src/test/: Makefile  Makefile.am  Makefile.in  test.cpp
c++abc/algo/: .gitignore
c++abc/algo/DProgram/: datatower.cpp  datatower.in  datatower.out  longest.cpp  warheads.cpp
c++abc/algo/DProgram/knapsack/: 01-bag.cpp  01-full.cpp  01-multiple.cpp  01-recursive.cpp  01-simple-2.cpp  01-simple.cpp  01-simple.data
c++abc/algo/backtrack/: 8queen.cpp  intset.cpp  intsum.cpp  iterative8queue.cpp  placeapp.cpp  primering.cpp
c++abc/algo/bignum/: add.cpp  mul.cpp  multiply.cpp  multiplydi.cpp  sub.cpp
c++abc/algo/divideconquer/: bsearch.cpp
c++abc/algo/greedy/: activity.cpp  playcard.cpp  water.cpp
c++abc/algo/recurrence/: datatower.cpp  fib.cpp  hanoicnt.cpp  placeapp.cpp
c++abc/algo/recursive/: hanoi.cpp  intset.cpp
c++abc/algo/sort/: bubble.cpp  bucket.cpp  insert.cpp  inversionpair.cpp  merging.cpp  quick.cpp  select.cpp
c++abc/algo/ufs/: Readme.txt  lca.cpp
c++abc/c++basic/: .gitignore
c++abc/c++basic/1st/: 1-1.cpp  1-2.cpp  1-3.cpp
c++abc/c++basic/2nd/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-6.cpp  2-7.cpp
c++abc/c++basic/3rd/: 3-1.cpp  3-2.cpp  3-3.cpp  3-4.cpp
c++abc/c++basic/4th/: 4-1.cpp  4-2.cpp  4-3.cpp  4-4.cpp  4-5.cpp
c++abc/c++basic/5th-array1/: 5-1-1.cpp  5-1-2.cpp  5-1-3.cpp  5-1-4.cpp  5-1-5.cpp
c++abc/c++basic/5th-array2/: 5-2-1.cpp  5-2-2.cpp
c++abc/c++basic/5th-array3/: 5-3-1.cpp  5-3-2.cpp
c++abc/c++basic/5th-array4/: 5-4-1.cpp  5-4-2.cpp
c++abc/c++basic/6th-func1/: 6-1-1.cpp  6-1-2.cpp  6-1-3.cpp  6-1-4.cpp  valueaddr.cpp
c++abc/c++basic/6th-func2-recur/: 6-2-1.cpp  6-2-2.cpp  6-2-3.cpp  6-2-4.cpp  data.txt  test.txt
c++abc/c++basic/7th-file-struct/: 7-1-1.cpp  7-1-2.cpp  7-1-3.cpp  7-1-4.cpp  7-1-5.cpp  7-1-6.cpp  in.txt
c++abc/c++basic/8th-pointer1/: 8-1-1.cpp  8-1-2.cpp  8-1-3.cpp  8-1-4.cpp  8-1-5.cpp  8-1-6.cpp  8-1-7.cpp  8-1-8.cpp
c++abc/c++basic/8th-pointer2/: funcpointer.cpp  linklist.cpp
c++abc/datastructure/1-stack/: decconvert.cpp  exprvalid.cpp
c++abc/datastructure/2-queue/: queue.cpp  queuecount.cpp
c++abc/datastructure/3-tree/: tree1.cpp  tree2.cpp
c++abc/datastructure/4-btree/: bigheap.cpp  btree.cpp  smallheap.cpp
c++abc/datastructure/5-graph/: algraph.cpp  matrixgraph.cpp
c++abc/noip/2010/: p2981.cpp
c++abc/noip/2019/: p5665.cpp
c++abc/noip/P5651/: dfs.cpp  spantree.cpp
c++abc/noip/p3258/: lca.cpp
c++abc/noip/p5019/: divroad.cpp  greedyroad.cpp
c++abc/noip/p5020/: curmark.cpp  curren.cpp  curstam.cpp  dpcurr.cpp
c++abc/noip/p5022/: travelseq.cpp
c++abc/noip/p5657/: graycode.cpp
c++abc/noip/p5664/: cookbook.cpp
c++abc/ques/: count.cpp
cplusplus/c++14/src/: Makefile  lambda_exam.cpp  misc.cpp  test  test.cpp
cplusplus/c++14/src/concurrent/: Makefile  basic.cpp
java/: .gitignore  IOCandDI
jersey-example/: README.md
scala/: .gitignore  README
scala/demo/: build.sbt
scala/demo/src/main/scala/dream2017/: Dream.scala
scala/demo/src/test/scala/dream2017/: DreamSpec.scala
spring/: .gitignore  README
spring/config/: configserver.yml
spring/test-springcloud/: pom.xml
spring/test-springcloud/src/main/java/com/mcosvc/testspringcloud/: ServletInitializer.java  TestSpringcloudApplication.java
spring/test-springcloud/src/test/java/com/mcosvc/testspringcloud/: TestSpringcloudApplicationTests.java
sql/: .gitignore  README  sqldb.sh
syhealth/: README.txt  manage.py  start.sh
syhealth/ccc/: admin.py  models.py  urls.py  utility.py  views.py
syhealth/ccc/migrations/: 0001_initial.py  0002_auto_20160527_1106.py  0003_auto_20160527_1459.py
syhealth/ccc/static/ccc/css/: base_ccc.css
syhealth/ccc/static/ccc/js/: DateTimeShortcuts.js
syhealth/ccc/templates/: customerinfo_base.html
syhealth/ccc/templates/customerinfo/: customerinfo_create.html  customerinfo_detail.html  customerinfo_list.html  customerinfo_update.html  feedback_confirm_delete.html  feedback_create.html  feedback_detail.html  feedback_list.html  feedback_update.html
syhealth/ccc/templates/registration/: login_ccc.html  logout_ccc.html  passwd_ccc_done.html  passwd_ccc_form.html
syhealth/oms/: admin.py  forms.py  models.py  urls.py  utility.py  views.py
syhealth/oms/migrations/: 0001_initial.py  0002_auto_20160527_1605.py  0003_auto_20160527_1606.py
syhealth/oms/templates/: product_base.html
syhealth/oms/templates/order/: cartitem_creation.html  cartitems_list.html  order_canceled.html  order_confirm_delete.html  order_confirmation.html  order_creation.html  order_detail.html  order_list.html  order_submit.html
syhealth/oms/templates/product/: product_confirm_delete.html  product_creation.html  product_detail.html  product_list.html  product_update.html
syhealth/oms/templates/registration/: login_oms.html  logout_oms.html  password_change_done.html  password_change_form.html
syhealth/oms/templates/retailer/: retailerinfo_confirm_delete.html  retailerinfo_creation.html  retailerinfo_detail.html  retailerinfo_list.html  retailerinfo_update.html
syhealth/syhealth/: settings.py  urls.py  wsgi.py
