#
# Initiated by Jared on March 07, 2017.
#
#


SUBDIRS = src/concurrent \
          src/misc \
          src/lambda \
          src/test

CURRENTPATH = $(/bin/pwd)

AM_CPPFLAGS = -I $(CURRENTPATH)/src/concurrent/ \
           -I $(CURRENTPATH)/src/misc/ \
           -I $(CURRENTPATH)/src/lambda/

export AM_CPPFLAGS
